[metadata]
name = py-cache-to-file
version = 0.0.1
author = Hector Orellana
author_email = hector.orellanaf92@gmail.com
description = Cache a function result to a file
long_description = file: README.org
long_description_content_type = text/org
url = https://github.com/horellana/py-cache-to-file
project_urls =
    Bug Tracker = https://github.com/horellana/py-cache-to-file/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
		 aiofiles==0.8.0

[options.packages.find]
where = src
